# react-native-offstore

./: CONTRIBUTING.md  README.md  package.json  react-native-offstore.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/offstore/: OffstoreModule.java  OffstorePackage.java
cpp/: host-object.cpp  react-native-offstore.cpp  react-native-offstore.h  state-cache.cpp  state-dispatcher.cpp  state-object.cpp
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/offstoreexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/offstoreexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/OffstoreExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/OffstoreExample.xcodeproj/: project.pbxproj
example/ios/OffstoreExample.xcodeproj/xcshareddata/xcschemes/: OffstoreExample.xcscheme
example/ios/OffstoreExample.xcworkspace/: contents.xcworkspacedata
example/ios/OffstoreExampleTests/: OffstoreExampleTests.m
example/src/: App.tsx
example/src/components/: AsyncStorageComponent.tsx  OffstoreComponent.tsx  OffstoreSubscriberComponent.tsx  twittel.json  twitter.json  utils.ts
includes/: cjson-utils.c
ios/: Offstore.h  Offstore.mm
ios/Offstore.xcodeproj/: project.pbxproj
src/: NativeOffstore.ts  index.tsx
(+1 files in other folders)
